asteroids demo updated

--- a/okinawa-asteroids/index.html
+++ b/okinawa-asteroids/index.html
@@ -24,6 +24,6 @@
       <canvas id="game-canvas" width="500" height="500"> </canvas>
     </div>
 
-    <script type="text/javascript" src="./bundle.js"></script>
+    <script type="text/javascript" src="./demo-asteroids.js"></script>
   </body>
 </html>
