asteroids demo updated, bugs fixed

--- a/okinawa-asteroids/index.html
+++ b/okinawa-asteroids/index.html
@@ -18,7 +18,7 @@
         <a href='http://twitter.com/neverbot'>twitter</a> or
         <a href='http://www.linkedin.com/in/ivanalonso'>linkedin</a>. <br />
         See and/or download the code by yourself (probably would be updated from this version) in
-        <a href='https://github.com/neverbot/okinawa.js'>github</a>.
+        <a href='https://github.com/okinawajs/okinawa.js'>github</a>.
       </div>
 
       <canvas id="game-canvas" width="500" height="500"> </canvas>
